# dotfiles

./: .Brewfile##os.Darwin  .bashrc  .gitconfig  .githelpers  .gitignore  .gitmessage  .highlight.css  .ignore  .inputrc  .macos-defaults  .markdown.css  .profile  .tmux.conf  alacritty.yml  bashrc  brew_binaries  brew_cask  brew_tap  cargo_bin  coc-settings.json  ctags  hammerspoon_init.lua  init.vim  install  install-bin  install-config  install-fish  install-vim  path.fish  tmux.conf  update  vimrc  ycm_extra_conf.py
.config/fish/: config.fish  fish_plugins
.config/ghostty/: config
.config/kitty/: kitty.conf
.config/nvim/: kitty+page.lua  lazy-lock.json
.config/nvim/lua/: plugins.lua  settings.lua
.config/nvim/lua/config/: cmp.lua  fzf-lua.lua  gitsigns.lua  lsp.lua  lualine.lua  null.lua  nvim-tree.lua  surround.lua  treesitter.lua
.config/nvim/plugin/: autocmds.vim  commands.vim  filetypes.vim  mappings.vim
.config/nvim/snippets/: c.snippets  cmake.snippets  cpp.snippets  go.snippets  html.snippets  javascript.snippets  javascriptreact.snippets  markdown.snippets  rust.snippets  typescript.snippets
.ctags.d/: default.ctags
.hammerspoon/: init.lua
.local/share/yadm/: archive
.ssh/: config
configs/: bashrc  ctags  gitconfig  githelpers  ignore  inputrc  install  markdown.css  profile  pylintrc  tmux.conf  ycm_extra_conf.py
configs/template/: template
configs/template/conan/: CMakeLists.txt  conanfile.txt
configs/template/make/: Makefile
configs/template/vcpkg/: CMakeLists.txt  main.cc
fish/: config.fish  fish_variables  fishfile
indent/: c.vim  cpp.vim
